Fix t in Component cutoff in Component Type.

--- a/src/styles/_react-datatable-overrides.scss
+++ b/src/styles/_react-datatable-overrides.scss
@@ -23,7 +23,7 @@
       font-weight: bold;
       border: solid 1px $epa-white;
       justify-content: left !important;
-      // display: inline-table;
+      overflow: visible !important;
       width: max-content;
       :focus {
         outline: none;
